# use_case_Interview

./: .env  .gitignor  .gitignore  README.md  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
notebooks/: Use_case.ipynb
