[project]
name = "use-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.15.8",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-text-splitters",
    "gradio",
    "chromadb",
    "sentence-transformers",
    "python-dotenv",
    "langchain-community"
]
